Bug 460416 - "Crash in account wizard" [r+sr=bienvenu]